# ebpf-probe

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  graph.py  packet-counter.bpf.c  packet-counter.py
benchmark/scripts/: README.md  disable_turboboost.sh  enable_hyperthreading.sh  graph_perf_logs.py  install_dependencies.sh  run_simple_experiment.sh
exp/: .gitignore
exp/memcached/: README.md  graph.ipynb  run_experiment.sh
exp/mutilate_increasing_qps/: README.md  gather_logs.sh  graph.ipynb  run_experiment.sh
exp/performance_overhead/: README.md  graph.ipynb
go/: test.go
graphs/: benchmark1.ipynb
include/: bpf_definitions.h  bpf_shared_maps.h  common_definitions.h  core_iterator_bpf.hpp  data_bpf.hpp  definitions.hpp  ebpf_probe.h  ebpf_probe.hpp  event_iterator_bpf.hpp  icmp.h  interface_helpers.hpp  kernel_definitions.h  perf_event_handler.h  perf_event_handler.hpp  perf_event_helpers.hpp  perf_event_open.h  probe.h  probe.skel.h  rapl_handler.h  rapl_handler.hpp  rapl_helpers.hpp  rapl_iterator_bpf.hpp  shared.h  shared_definitions.h  stb_ds.h  userspace_loader.hpp  xdp_probe.h  xdp_probe.skel.h  xdp_prog.skel.h
include/bpf/: definitions.h  shared_maps.h
include/iterator/: core_iterator_bpf.hpp  cpu_iterator_bpf.hpp  event_iterator_bpf.hpp  interface_iterator_bpf.hpp  rapl_iterator_bpf.hpp
lib/stb_ds/: stb_ds.h
programs/go_demo/: demo.go
programs/logger/: CMakeLists.txt
programs/logger/include/: easyargs.h
programs/logger/src/: main.c
programs/perf_event/: CMakeLists.txt
programs/perf_event/include/: easyargs.h
programs/perf_event/src/: main.c
programs/xdp_probe/: CMakeLists.txt
programs/xdp_probe/src/: main.c
scripts/: README.md  cat_all_cores.sh  cat_all_cpus.sh  cat_all_domains.sh  disable_hyperthreading.sh  enable_turboboost.sh  gather_cpu_metrics.sh  gather_data.py  gather_rapl_metrics.sh  graph.py  graph_ebpf_probe_logger.py  graph_ipmi_logs.py  graph_perf_logs.py  graph_wrk_latency.py  install_dependencies.sh  log_cores.py  read_cpus.sh  read_rapl.sh  run_simple_experiment.sh  sample_cores_over_time.py  set_all_cores_performance.sh  validate-with-perf.sh  validate_with_perf.sh  validating_energy_pkg.sh
src/: .kernel_module.o.d  core_iterator.bpf.c  core_iterator_bpf.cpp  data.bpf.c  data_bpf.cpp  ebpf_probe.bpf.c  ebpf_probe.c  ebpf_probe.cpp  ebpf_probe_data.bpf.c  ebpf_probe_iter.bpf.c  ebpf_probe_per_core_iterator.bpf.c  ebpf_probe_per_rapl_domain_iterator.bpf.c  event_iterator_bpf.cpp  interface_iterator_bpf.cpp  kernel_module.c  main.c  main.cpp  perf_event_handler.c  probe.bpf.c  probe.c  rapl_handler.c  rapl_iterator.bpf.c  rapl_iterator_bpf.cpp  userspace_loader.cpp  xdp_probe.bpf.c  xdp_probe.c  xdp_prog.bpf.c
src/bpf/: core_iterator.bpf.c  cpu_iter.bpf.c  data.bpf.c  event_iter.bpf.c  event_iterator.bpf.c  interface_iter.bpf.c  interface_iterator.bpf.c  probe.bpf.c  rapl_iter.bpf.c  rapl_iterator.bpf.c
src/iterator/: core_iterator_bpf.cpp  cpu_iterator_bpf.cpp  event_iterator_bpf.cpp  interface_iterator_bpf.cpp  rapl_iterator_bpf.cpp
src/kernel_module/: ebpf_probe_create_proc_dir.c
